# PGPracticas4567

./: CMakeLists.txt  leeme.txt  pract-pg.sln
PGUPV/: app.cpp
ej4-1/: CMakeLists.txt  ej4-1.vcxproj  log.txt
ej4-2/: CMakeLists.txt  ej4-2.vcxproj  log.txt  main.cpp
ej5-1/: CMakeLists.txt  ej5-1.vcxproj  log.txt  main.cpp
ej5-2/: CMakeLists.txt  ej5-2.vcxproj  imgui.ini  log.txt  main.cpp  properties.ini
ej5-3/: CMakeLists.txt  ej5-3.vcxproj  log.txt  main.cpp
ej6-1/: ej6-1.vcxproj  log.txt  main.cpp
ej6-2/: ej6-2.vcxproj  log.txt  main.cpp
ej6-3/: ej6-3.vcxproj  log.txt  main.cpp
ej6-4/: CMakeLists.txt  ej6-4.vcxproj  log.txt  main.cpp
ej6-5/: CMakeLists.txt  ej6-5.vcxproj  log.txt  main.cpp
ej7-1/: CMakeLists.txt  ej7-1.vcxproj  log.txt  main.cpp
ej7-2/: CMakeLists.txt  ej7-2.vcxproj  log.txt  main.cpp
ej7-3/: CMakeLists.txt  ej7-3.vcxproj  log.txt  main.cpp
ej7-4/: ej7-4.vcxproj  log.txt  main.cpp
p4/: CMakeLists.txt  log.txt  main.cpp  p4.vcxproj
p4a/: log.txt  main.cpp  p4a.vcxproj  p4a.vcxproj.filters  properties.ini  textureOld.frag
p4b/: imgui.ini  log.txt  main.cpp  p4b.vcxproj  p4b.vcxproj.filters  properties.ini  textureMagicOrb.frag
p5/: gouraud.vert  imgui.ini  log.txt  main.cpp  p5.vcxproj  phong.frag  phong.vert
p6/: CMakeLists.txt  cut_by_cylinder.frag  cut_by_cylinder.geom  cut_by_cylinder.vert  log.txt  main.cpp  p6.vcxproj
p7/: imgui.ini  log.txt  main.cpp  p7.vcxproj  shader.frag  shader.tesc  shader.tese  shader.vert
